--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <form id="form-turno">
     <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" required />
+    <input type="text" id="nombre" placeholder="Ingresa tu nombre" required />
 
     <label for="servicio">Servicio:</label>
     <select id="servicio" required>
@@ -37,6 +37,7 @@
   <h2>Turnos reservados</h2>
   <ul id="lista-turnos"></ul>
 
+  <script src="js/utils.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
